--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="websiteStyle.css">
     </head>
     <body>
         <h1>Hi Dani <3 <3 <3</h1>
