--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
         <link rel="stylesheet" href="websiteStyle.css">
     </head>
     <body>
-        <h1>Hi Dani <3 <3 <3</h1>
-
-<p> Is this working
-
-</p>
+        <h1>In Progress</h1>
+	<br></br>
+        <p> Is this working </p>
     </body>
 
 
