--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="websiteStyle.css">
+	<title> Toren Dofher</title>
     </head>
     <body>
         <h1>In Progress</h1>
