--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>In Progress</h1>
 	<br></br>
         <p> Is this working </p>
+	<a href="https://enph253-team6.weebly.com/team.html">Robot Competition Link</a>
     </body>
 
 
