Technical Projects Added

--- a/index.html
+++ b/index.html
@@ -141,6 +141,40 @@ swimming.</li>
        
       </div>
 
+
+	<div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-dark-grey w3-padding-16"><i class="fa fa-rocket fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i><b>TECHNICAL PROJECTS</b></h2>
+	  <div class="w3-container">
+          <h5 class="w3-opacity"><b>UBC ROCKET, 100km TEAM</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2017 - Present</h6>
+          <p><ul>
+		<li>Recently joined a student rocketry team whose goal is to
+		put a rocket into space (100km up to a location called the
+		Karman line) in a 3-year timeframe.</li>
+		<li>Dimensioning the nozzle and combustion chamber based
+		on mission requirements, choosing flow meters and
+		pressure sensors for the hot-fire test.</li>
+		<li>Currently designing test stand communication system with fibre optics.</li>
+	  </ul></p>
+          <hr>
+          </div>
+	  <div class="w3-container">
+          <h5 class="w3-opacity"><b>ENGINEERING PHYSICS ROBOT COMPETITION</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAY 2017 - AUGUST 2017</h6>
+          <p><ul>
+		<li>Designed, constructed and programmed an autonomous
+		robot to compete in: line following, grabbing objects,
+		placing objects on a zipline.</li>
+		<li>Used voltage regulation to control DC and servo motors,
+		QRD sensors and infrared detector from an Arduino based
+		micro-controller.</li>
+		<li>For design details and video see link in left sidebar.</lin>
+		
+	  </ul></p>
+          <hr>
+        </div>
+      </div>
+
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-dark-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i><b>EDUCATION</b></h2>
 	  <div class="w3-container">
@@ -160,7 +194,6 @@ swimming.</li>
 		<li>Student Treasurer, Anti-Bullying Team Member, Model UN Club Founder, voluteer trip to South Bronx.</li>
 		<li>Lead in school play, top instrumental performer for alto saxophone, top student Senior Advanced Choir, top student AP Art History, qualified for provincials in Ultimate Frisbee and Wrestling.</li>
 	  </ul></p>
-          <hr>
         </div>
       </div>
 
