--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 	  <p><a href="https://github.com/tdofher/portfolio.git"><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-blue"></i>Github</a></p>
 	  <p><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-wrench fa-fw w3-margin-right w3-large w3-text-blue"></i>Robot</a></p>
+	  <p><a href="https://www.facebook.com/ubcrocket/"><i class="fa fa-rocket fa-fw w3-margin-right w3-large w3-text-blue"></i>Rocket</a></p>
+
+
 
 	<hr>
 
@@ -85,9 +88,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<li>Forklift, Boom-lift and Scissor-lift Trained</li>
 	  </ul></p>
           
-          <br>
+          <hr>
 
-          <br>
+          <p class="w3-large"><b><i class="fa fa-bitcoin fa-fw w3-margin-right w3-text-blue"></i>Interests</b></p>
+	  <p><ul>
+		<li>Mathematics</li>
+		<li>Saxophone</li>
+		<li>Art History</li>
+		<li>Rock-Climbing</li>
+		<li>Skiing</li>
+		<li>Swimming</li>
+		<li>Hiking</li>
+		<li>World Travel</li>
+		<li>Ultimate Frisbee</li>
+		<li>Cryptocurrency</li>
+	  </ul></p>
+	  <br>
         </div>
       </div><br>
 
@@ -107,34 +123,32 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>RESEARCH ASSISTANT,</b> BIOMEMS LAB</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2017 - April 2017</h6>
           <p><ul>
-<li>Conducted studies in microfluidics for the purposes of single cell printing.</li>
-<li>Automated many of the processes within the role including scripts to do image processing
-work and operating the motorized microscope, resulting in tenfold productivity increase.</li>
-<li>Created a photographing system that could capture individual droplets with microsecond
-precision and a circuit for modifying waveforms controlling the laboratory drop printer. </li>
-
+		<li>Conducted studies in microfluidics for the purposes of single cell printing.</li>
+		<li>Automated processes within the role including scripts to do image processing
+		work and operating the motorized microscope, resulting in tenfold productivity increase.</li>
+		<li>Created a photographing system that could capture individual droplets with microsecond
+		precision and a circuit for modifying waveforms controlling the laboratory drop printer. </li>
 	  </ul></p>
           <hr>
         </div>
 
-<div class="w3-container">
+	<div class="w3-container">
           <h5 class="w3-opacity"><b>AQUATIC LEADER,</b> CITY OF PORT COQUITLAM</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2015 - Present</h6>
           <p><ul>
-<li>Taught students of all ages, raising awareness for water safety and fostering a love of
-swimming.</li>
+		<li>Taught students of all ages, raising awareness for water safety and fostering a love of
+		swimming.</li>
 
 	  </ul></p>
           <hr>
         </div>
 
-<div class="w3-container">
+	<div class="w3-container">
           <h5 class="w3-opacity"><b>SITE SAFETY REPRESENTATIVE,</b> PRIME ONE PROPERTIES</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2016 - August 2016</h6>
           <p><ul>
-<li>With a team of laborers, tradesmen, electricians and engineers started the process of converting a 60,000 square foot cold storage facility into self-storage units.</li>
-<li>Following Worksafe BC guidelines inspected site machinery and assessed job site for potential safety hazards, resulting in well met site inspections and zero safety related injuries over a four month period.</li>
-
+		<li>With a team of laborers, tradesmen, electricians and engineers started the process of converting a 60,000 square foot cold storage facility into self-storage units.</li>
+		<li>Following Worksafe BC guidelines inspected site machinery and assessed job site for potential safety hazards, resulting in well met site inspections and zero safety related injuries over a four month period.</li>
 	  </ul></p>
 	<br>
         </div>
@@ -148,7 +162,7 @@ swimming.</li>
           <h5 class="w3-opacity"><b>UBC ROCKET, 100km TEAM</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2017 - Present</h6>
           <p><ul>
-		<li>Recently joined a student rocketry team whose goal is to
+		<li>Part of a student rocketry team whose goal is to
 		put a rocket into space (100km up to a location called the
 		Karman line) in a 3-year timeframe.</li>
 		<li>Dimensioning the nozzle and combustion chamber based
@@ -171,11 +185,12 @@ swimming.</li>
 		<li>For design details and video see link in left sidebar.</lin>
 		
 	  </ul></p>
-          <hr>
+          <br>
         </div>
       </div>
 
-      <div class="w3-container w3-card w3-white">
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-dark-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i><b>EDUCATION</b></h2>
 	  <div class="w3-container">
           <h5 class="w3-opacity"><b>UBC, VANCOUVER,</b> 3<sup>rd</sup> YEAR ENGINEERING PHYSICS</h5>
@@ -190,10 +205,34 @@ swimming.</li>
           <h5 class="w3-opacity"><b>ARCHBISHOP CARNEY,</b> HIGH SCHOOL DIPLOMA</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2015</h6>
           <p><ul>
-		<li>Saludatorian, 98% Average, Top 20 Provincial Exam Average.</li>
+		<li>Valedictorian, 98% Average, Top 1% Provincial Exam Average.</li>
 		<li>Student Treasurer, Anti-Bullying Team Member, Model UN Club Founder, voluteer trip to South Bronx.</li>
-		<li>Lead in school play, top instrumental performer for alto saxophone, top student Senior Advanced Choir, top student AP Art History, qualified for provincials in Ultimate Frisbee and Wrestling.</li>
+		<li>Lead in school play, top instrumental performer (alto sax), top student Senior Advanced Choir and AP Art History, provincials Ultimate Frisbee and Wrestling.</li>
 	  </ul></p>
+	  <br>
+        </div>
+      </div>
+
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-dark-grey w3-padding-16"><i class="fa fa-globe fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i><b>VOLUNTEER EXPERIENCE</b></h2>
+	  <div class="w3-container">
+          <h5 class="w3-opacity"><b>STUDENT GOVERNMENT</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2015 - Present</h6>
+          <p><ul>
+		<li>Current VP Academic for the Engineering Physics Student Society. Role involves working
+with departments and professors to advocate for improved student experience. </li>
+		<li>Previous roles include First Year VP, Second Year Rep, E-Week Rep and Speaker.</li>
+	  </ul></p>
+          <hr>
+          </div>
+	  <div class="w3-container">
+          <h5 class="w3-opacity"><b>ENGINEERS WITHOUT BORDERS</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAY 2017 - AUGUST 2017</h6>
+          <p><ul>
+		<li>Planned a fundraising gala to support the chapter and send two volunteers to West Africa.</li>
+	  </ul></p>
+          <br>
         </div>
       </div>
 
@@ -207,14 +246,14 @@ swimming.</li>
 </div>
 
 <footer class="w3-container w3-dark-grey w3-center w3-margin-top w3-margin-bottom">
-  <p>Find me on social media.</p>
-  <p><i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <p>Find me on linkedin.</p>
+  <p><!--<i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
-  <!--<i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>-->
   <i class="fa fa-linkedin w3-hover-opacity"></i></p>
-  <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
+  <!--<p><a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
  
 </footer>
 
