--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 
 	<div class="w3-container">
+          <h5 class="w3-opacity"><b>RESEARCH ASSISTANT,</b> BOREAL GENOMICS</h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2016 - April 2017</h6>
+          <p><ul>
+		<li>Prepared blood samples in a research study for early cancer identification.</li>
+
+	  </ul></p>
+          <hr>
+        </div>
+
+	<div class="w3-container">
           <h5 class="w3-opacity"><b>AQUATIC LEADER,</b> CITY OF PORT COQUITLAM</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2015 - Present</h6>
           <p><ul>
@@ -168,7 +178,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<li>Dimensioning the nozzle and combustion chamber based
 		on mission requirements, choosing flow meters and
 		pressure sensors for the hot-fire test.</li>
-		<li>Currently designing test stand communication system with fibre optics.</li>
+		<li>Currently designing fibre optic test stand communication system.</li>
 	  </ul></p>
           <hr>
           </div>
@@ -197,7 +207,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - Present (Graduate 2020)</h6>
           <p><ul>
 		<li>86% Average, Dean's Honor List</li>
-		<li> APEGBC Entrance Scholarship, Loran Scholarship, Dogwood Scholarship, Canadian Merit Scholarship, Trek Excellence Scholarship, Thomas Beeching Scholarship</li>
+		<li>Scholarships: APEGBC, Loran, Dogwood, Canadian Merit, Trek Excellence, Thomas Beeching</li>
 	  </ul></p>
           <hr>
           </div>
@@ -221,7 +231,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2015 - Present</h6>
           <p><ul>
 		<li>Current VP Academic for the Engineering Physics Student Society. Role involves working
-with departments and professors to advocate for improved student experience. </li>
+		with departments and professors to advocate for improved student experience. </li>
 		<li>Previous roles include First Year VP, Second Year Rep, E-Week Rep and Speaker.</li>
 	  </ul></p>
           <hr>
