--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<h1>Toren Dofher</h1>
 		<div class="links">
 			<a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a>
-			<!--<a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a>-->
+			<a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a>
 			<a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a>
 			<!--<a href="notes.html"><i class="fa fa-pencil fa-5x fa-fw"></i></a>-->
 		</div>
