--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<div class="links">
 			<a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a>
 			<a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a>
+			<a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a>
 			<a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a>
 			<!--<a href="notes.html"><i class="fa fa-pencil fa-5x fa-fw"></i></a>-->
 		</div>
