--- a/resume.html
+++ b/resume.html
@@ -159,7 +159,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>SITE SAFETY REPRESENTATIVE,</b> PRIME ONE PROPERTIES</h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2016 - August 2016</h6>
           <p><ul>
-		<li>With a team of laborers, tradesmen, electricians and engineers converted a 60,000 square foot cold storage facility into self-storage units.</li>
+		<li>With a team of laborers, tradesmen, electricians and engineers, converted a 60,000 square foot cold storage facility into self-storage units.</li>
 		<li>Following Worksafe BC guidelines inspected site machinery and assessed job site for potential safety hazards, resulting in consistently positive site inspections and zero safety related injuries over a four month period.</li>
 	  </ul></p>
 	<br>
