--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-third">
     
       <div class="w3-white w3-text-dark-grey w3-card-4">
+	
+	<div class = "w3-container">
+ 		<p><a href="http://tdofher.com/"><i class="fa fa-arrow-left fa-fw w3-margin-right w3-large w3-text-blue"></i>Back</a></p>
+	</div>
         <div class="w3-display-container">
           <img src="profile_pic.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
@@ -129,7 +133,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<li>Created a photographing system that could capture individual droplets with microsecond
 		precision and a circuit for modifying waveforms controlling the laboratory drop printer. </li>
 	  </ul></p>
-          <hr>
         </div>
 
 	<div class="w3-container">
@@ -141,7 +144,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
 	  </ul></p>
-          <hr>
         </div>
 
 	<div class="w3-container">
@@ -152,7 +154,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		swimming.</li>
 
 	  </ul></p>
-          <hr>
         </div>
 
 	<div class="w3-container">
@@ -182,7 +183,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		pressure sensors for the hot-fire test.</li>
 		<li>Currently designing fibre optic test stand communication system.</li>
 	  </ul></p>
-          <hr>
           </div>
 	  <div class="w3-container">
           <h5 class="w3-opacity"><b>ENGINEERING PHYSICS ROBOT COMPETITION</b></h5>
@@ -211,7 +211,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<li>86% Average, Dean's Honor List</li>
 		<li>Scholarships: APEGBC, Loran, Dogwood, Canadian Merit, Trek Excellence, Thomas Beeching</li>
 	  </ul></p>
-          <hr>
           </div>
 	  <div class="w3-container">
           <h5 class="w3-opacity"><b>ARCHBISHOP CARNEY,</b> HIGH SCHOOL DIPLOMA</h5>
@@ -236,7 +235,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		with departments and professors to advocate for improved student experience. </li>
 		<li>Previous roles include First Year VP, Second Year Rep, E-Week Rep and Speaker.</li>
 	  </ul></p>
-          <hr>
           </div>
 	  <div class="w3-container">
           <h5 class="w3-opacity"><b>ENGINEERS WITHOUT BORDERS</b></h5>
