--- a/index.html
+++ b/index.html
@@ -38,15 +38,47 @@
 			a:hover {
 				color: white;
 			}
+
+			/* Tooltip container */
+			.tooltip {
+    			position: relative;
+    			display: inline-block;
+    			border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+			}
+
+			/* Tooltip text */
+			.tooltip .tooltiptext {
+   		 	visibility: hidden;
+   			width: 120px;
+    			background-color: black;
+    			color: #fff;
+    			text-align: center;
+    			padding: 5px 0;
+    			border-radius: 4px;
+ 
+    			/* Position the tooltip text - see examples below! */
+    			position: absolute;
+    			z-index: 1;
+			top: 100%;
+    			left: 50%; 
+    			margin-left: -60px;
+			}
+
+			/* Show the tooltip text when you mouse over the tooltip container */
+			.tooltip:hover .tooltiptext {
+   			 visibility: visible;
+			}
 		</style>
 	</head>
 	<body>
+
+  
 		<h1>Toren Dofher</h1>
 		<div class="links">
-			<a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a>
-			<a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a>
-			<a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a>
-			<a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a>
+			<div class="tooltip"><a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a><span class="tooltiptext">Resume</span></div>
+			<div class="tooltip"><a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a><span class="tooltiptext">GitHub</span></div>
+			<div class="tooltip"><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a><span class="tooltiptext">Robot</span></div>
+			<div class="tooltip"><a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a><span class="tooltiptext">LinkedIn</span></div>
 			<!--<a href="notes.html"><i class="fa fa-pencil fa-5x fa-fw"></i></a>-->
 		</div>
 	
