--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			.tooltip {
     			position: relative;
     			display: inline-block;
-    			border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    			 /* If you want dots under the hoverable text */
 			}
 
 			/* Tooltip text */
