--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			.tooltip .tooltiptext {
    		 	visibility: hidden;
    			width: 120px;
-    			background-color: black;
+    			/*background-color: black;*/
     			color: #fff;
     			text-align: center;
     			padding: 5px 0;
