--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 				color: white;
 				font-size: 7vw;
 				margin-top: 0;
+				margin-bottom: 0;
+			}
+			h2 {
+				margin-top: 0;
 			}
 			a {
 				text-decoration: inherit;
@@ -74,10 +78,13 @@
 
   
 		<h1>Toren Dofher</h1>
+        <div>
+            <h2>BASc. Engineering Physics, UBC</h2>
+        </div>
 		<div class="links">
 			<div class="tooltip"><a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a><span class="tooltiptext">Resume</span></div>
 			<div class="tooltip"><a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a><span class="tooltiptext">GitHub</span></div>
-			<div class="tooltip"><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a><span class="tooltiptext">Robot</span></div>
+			<!--<div class="tooltip"><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a><span class="tooltiptext">Robot</span></div>-->
 			<div class="tooltip"><a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a><span class="tooltiptext">LinkedIn</span></div>
 			<!--<a href="notes.html"><i class="fa fa-pencil fa-5x fa-fw"></i></a>-->
 		</div>
