Everything up to date, outdated links removed

--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://kit.fontawesome.com/22bdba1596.js" crossorigin="anonymous"></script>
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css" />-->
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
@@ -36,13 +38,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <!--<p><i class="fa fa-cogs fa-fw w3-margin-right w3-large w3-text-blue"></i>BASc. Engineering Physics,</p>
     <p><i class="fa fa-fw w3-margin-right w3-large w3-text-blue"></i>Minor In Honours Mathematics,</p>
     <p><i class="fa fa-fw w3-margin-right w3-large w3-text-blue"></i>University Of British Columbia</p>-->
+            <p><i class="fa fa-download fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="2020_Resume_TorenDofher.pdf" download="TorenDofher_Resume">Download Resume</a></p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Vancouver, BC</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>tdofher@gmail.com</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(778)-926-3947</p>
             <hr>
 
             <p><a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-blue"></i>LinkedIn</a></p>
-            <p><a href="https://github.com/tdofher/portfolio.git"><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-blue"></i>Github</a></p>       
+            <p><a href="https://github.com/tdofher/portfolio.git"><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-blue"></i>Github</a></p>
             <!--<p><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-wrench fa-fw w3-margin-right w3-large w3-text-blue"></i>Robot</a></p>-->
             <!--<p><a href="https://www.facebook.com/ubcrocket/"><i class="fa fa-rocket fa-fw w3-margin-right w3-large w3-text-blue"></i>Rocket</a></p>-->
 
@@ -137,6 +140,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         </ul>
     </p>-->
+            
+            <hr />
+            <p class="w3-large"><b><i class="fas fa-volleyball-ball fa-fw w3-margin-right w3-text-blue"></i>Athletics</b></p>
+            <p>
+                <ul>
+                    <li>UBC Rec Volleyball</li>
+                    <li>EUS Vollyball Tournament</li>
+                    <li>UBC Latin Dance Club, Salsa and Bachata</li>
+                    <li>EUS Ultimate Tournament</li>
+
+                </ul>
+            </p>
 
             <hr>
 
@@ -150,9 +165,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     <li>Skiing</li>
                     <li>Swimming</li>
                     <li>Hiking</li>
+                    <li>Running</li>
                     <li>World Travel</li>
                     <li>Ultimate Frisbee</li>
                     <li>Cryptocurrency</li>
+                    <li>Economics</li>
+                    <li>Trivia - 2020 Genius Bowl and E-Week Winner</li>
+                    <li>Weekly Pub Trivia</li>
 
                 </ul>
             </p>
@@ -202,7 +221,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
             <div class="w3-container">
                 <h5 class="w3-opacity"><b>TEACHING ASSISTANT,</b> UBC, VANCOUVER</h5>
-                <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Seotember 2019 - April 2020</h6>
+                <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2019 - April 2020</h6>
                 <p>
                     <ul>
                         <li>
@@ -472,7 +491,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
             <div class="w3-container">
                 <h5 class="w3-opacity"><b>ENGINEERS WITHOUT BORDERS</b>, UBC CHAPTER</h5>
-                <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAY 2017 - AUGUST 2017</h6>
+                <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2017 - August 2017</h6>
                 <p>
                     <ul>
                         <li>Planned a fundraising gala to support the chapter and send two volunteers to West Africa.</li>
