--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 		<div class="links">
 			<div class="tooltip"><a href="resume.html"><i class="fa fa-file-text fa-5x fa-fw"></i></a><span class="tooltiptext">Resume</span></div>
-			<div class="tooltip"><a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a><span class="tooltiptext">GitHub</span></div>
+			<!--<div class="tooltip"><a href="https://github.com/tdofher"><i class="fa fa-github fa-5x fa-fw"></i></a><span class="tooltiptext">GitHub</span></div>-->
 			<!--<div class="tooltip"><a href="https://enph253-team6.weebly.com/team.html"><i class="fa fa-cogs fa-5x fa-fw"></i></a><span class="tooltiptext">Robot</span></div>-->
 			<div class="tooltip"><a href="https://www.linkedin.com/in/toren-dofher/"><i class="fa fa-linkedin fa-5x fa-fw"></i></a><span class="tooltiptext">LinkedIn</span></div>
 			<!--<a href="notes.html"><i class="fa fa-pencil fa-5x fa-fw"></i></a>-->
